--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <p class="section-description">Desde o lançamento de nossa iniciativa, temos promovido diversas ações que fortalecem a conexão e geram benefícios tangíveis:</p>
                 <div class="impact-cards">
                     <div class="impact-card">
-                        <img src="paisagem-prado-ensolarado_1112-134.jpg" alt="Campo vibrante">
+                        <img src="espaco-rural-brasileiro.jpg" alt="Campo vibrante">
                         <h3>Do Campo para a Cidade</h3>
                         <p>Apoiamos pequenos produtores rurais, facilitando o escoamento de seus produtos diretamente para os centros urbanos, garantindo preços justos e alimentos de qualidade.</p>
                     </div>
